--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <header>
 
+    <!-- Navigation -->
     <div class="navigation-wrap bg-light start-header start-style">
       <div class="container">
         <div class="row">
@@ -31,7 +32,6 @@
             <nav class="navbar navbar-expand-md navbar-light">
 
               <a class="navbar-brand" href="#home" target="_blank"> <img src="images/logo.png" alt=""></a>
-
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -40,7 +40,6 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto py-4 py-md-0">
                   <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-
                   </li>
                   <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                     <a class="nav-link" href="#">Eat + Drink</a>
@@ -49,7 +48,6 @@
                     <a class="nav-link" href="#">Gallery</a>
                   </li>
                   <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-
                   </li>
                   <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                     <a class="nav-link" href="#">Rent Our Space</a>
@@ -59,7 +57,6 @@
                   </li>
                 </ul>
               </div>
-
             </nav>
 
   </header>
@@ -68,9 +65,22 @@
   <!-- Hero Image -->
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
-
+      <div align="center" class="socialbtns">
+        <ul>
+          <li><a href="#" class="fa fa-lg fa-facebook"></a></li>
+          <li><a href="#" class="fa fa-lg fa-twitter"></a></li>
+          <li><a href="#" class="fa fa-lg fa-google-plus"></a></li>
+          <li><a href="#" class="fa fa-lg fa-github"></a></li>
+          <li><a href="#" class="fa fa-lg fa-pinterest"></a></li>
+          <li><a href="#" class="fa fa-lg fa-linkedin"></a></li>
+          <li><a href="#" class="fa fa-lg fa-instagram"></a></li>
+          <li><a href="#" class="fa fa-lg fa-youtube"></a></li>
+        </ul>
+      </div>
     </div>
   </div>
+
+
 
   <!-- Our Story -->
   <div class="container mx-auto">
@@ -217,7 +227,6 @@
 
 
   <!-- Beverage Menu -->
-
   <div class="container">
     <div class="row">
       <div class="col">
