--- a/index.html
+++ b/index.html
@@ -378,18 +378,29 @@
 
 
 
-  <section>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 mt-5">
-          <div class="about">
-            <footer class="page-footer font-small">
-              <div class="footer-copyright text-center py-3">© 2019 Copyright:
-                <a href="#">sunflowercaffe.com</a>
-              </div>
-            </footer>
-          </div>
-  </section>
+<!-- Site footer -->
+<footer class="site-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <h6>About</h6>
+        <p class="text-justify">Scanfcode.com <i>CODE WANTS TO BE SIMPLE </i> is an initiative  to help the upcoming programmers with the code. Scanfcode focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers build up concepts in different programming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Algorithm.</p>
+      </div>
+      <div class="col-xs-6 col-md-6">
+      <div class="news-container">
+        <h3>Subscribe to my news letter</h3>
+          <form action="">
+            <input required placeholder="ENTER YOUR E-MAIL HERE" type="email" id="email">
+            <input id="submit" type="submit" value="Subscribe">
+          </form>
+      </div>
+        <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by
+          <a href="#">Scanfcode</a>.
+        </p>
+      </div>
+  </div>
+</div>
+</footer>
 
 
   <!-- Optional JavaScript -->
