--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
   <!-- Breaker -->
   <div class="container-fluid breaker my-5" style="background-color: orange">
   </div>
-
+<!-- 
   <section>
     <div class="container">
       <div class="row">
@@ -369,13 +369,7 @@
         </div>
       </div>
     </div>
-  </section>
-
-
-
-
-
-
+  </section> -->
 
 
 <!-- Site footer -->
@@ -384,7 +378,12 @@
     <div class="row">
       <div class="col-sm-12 col-md-6">
         <h6>About</h6>
-        <p class="text-justify">Scanfcode.com <i>CODE WANTS TO BE SIMPLE </i> is an initiative  to help the upcoming programmers with the code. Scanfcode focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers build up concepts in different programming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Algorithm.</p>
+        <p>Welcome to the Sunflower Caffe. We are located on the historic Sonoma Plaza
+          in the heart of githe California Wine Country. Our food is simple, our ingredients
+          are real. We use salt from the San Francisco Bay, Milk from cows grazing in the
+          Sonoma County pastures and local organic eggs in all of our dishes. The Sunflower
+          Caffe is located in Historic Landmark #501 - the old home of Salvador Vallejo. He
+          ultimately lost it in a poker game, which worked out great for us.</p>
       </div>
       <div class="col-xs-6 col-md-6">
       <div class="news-container">
