--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
   </section>
 
   <!-- Breaker -->
-  <div class="container-fluid breaker my-5" style="background-color: orange">
-  </div>
+  <!-- <div class="container-fluid breaker my-5" style="background-color: orange">
+  </div> -->
 <!-- 
   <section>
     <div class="container">
