--- a/index.html
+++ b/index.html
@@ -215,8 +215,6 @@
     <div class="row">
       <div class="col">
         <h1 class="menu-header">Beverage</h1>
-        <hr style="border: .5px solid#000;">
-        <hr style="border: .5px solid#000;">
       </div>
     </div>
     <div class="row">
@@ -374,7 +372,7 @@
 <footer class="site-footer">
   <div class="container">
     <div class="row">
-      <div class="col-sm-12 col-md-6 pt-5">
+      <div class="col-sm-12 col-md-6">
         <h6>About</h6>
         <p>Welcome to the Sunflower Caffe. We are located on the historic Sonoma Plaza
           in the heart of githe California Wine Country. Our food is simple, our ingredients
