menu border testg

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 sweeterstuff">
         <h2>the sweeter stuff</h2>
         <span class="menu-text d-inline-block pt-3">Bakeshop Pastry</span><br>
         <span class="menu-ingredients">scones, croissants, muffins, cookies etc.</span></br>
