--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 sweeterstuff">
-        <h2>the sweeter stuff</h2>
+      <div class="col-md-6">
+        <h2 class="sweeterstuff">the sweeter stuff</h2>
         <span class="menu-text d-inline-block pt-3">Bakeshop Pastry</span><br>
         <span class="menu-ingredients">scones, croissants, muffins, cookies etc.</span></br>
         <span class="menu-text d-inline-block pt-3">Coconut Chia Seed Pudding</span><span class="menu-ingredients pl-5">
