--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
     </div>
     <div class="row">
       <div class="col-md-6">
-        <h2 class="sweeterstuff">the sweeter stuff</h2>
+        <div class="sweeterstuff">
+        <h2>the sweeter stuff</h2>
         <span class="menu-text d-inline-block pt-3">Bakeshop Pastry</span><br>
         <span class="menu-ingredients">scones, croissants, muffins, cookies etc.</span></br>
         <span class="menu-text d-inline-block pt-3">Coconut Chia Seed Pudding</span><span class="menu-ingredients pl-5">
@@ -148,6 +149,7 @@
         <span class="menu-ingredients">organic eggs, kobocha squash, leeks, spinach, Nina's famous salsa roja, lime
           cream, cilantro, cotija cheese</span><br>
       </div>
+    </div>
 
       <div class="col-md-6">
         <h2 class="pt-3">soup, salads & steak</h2>
