--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
     <div class="row">
       <div class="col-md-6">
-        <div class="sweeterstuff">
+        <div class="menu1 pl-4">
         <h2>the sweeter stuff</h2>
         <span class="menu-text d-inline-block pt-3">Bakeshop Pastry</span><br>
         <span class="menu-ingredients">scones, croissants, muffins, cookies etc.</span></br>
@@ -120,6 +120,7 @@
           8.</span><br>
         <span class="menu-ingredients">huckleberry compote, whipped cream, organic vermont maple syrup</span></br>
       </div>
+      <div class="menu2 pl-4">
         <h2 class="pt-3">eggs & such</h2>
         <span class="menu-text d-inline-block pt-3">Avocado Toast</span><span class="menu-ingredients pl-5">
           9.</span><br>
@@ -150,8 +151,10 @@
         <span class="menu-ingredients">organic eggs, kobocha squash, leeks, spinach, Nina's famous salsa roja, lime
           cream, cilantro, cotija cheese</span><br>
       </div>
+    </div>
 
       <div class="col-md-6">
+          <div class="menu3 pl-4">
         <h2 class="pt-3">soup, salads & steak</h2>
         <span class="menu-text d-inline-block pt-3">Cream Of Tomato Soup & Salad</span><span
           class="menu-ingredients pl-5"> 9.</span><br>
@@ -169,6 +172,8 @@
           class="menu-ingredients pl-5"> 8.</span><br>
         <span class="menu-ingredients">Snake River Farms flank steak, green olive tapenade, spiced pumpkin seeds,
           roasted kabocha squash, rocket arugula tossed in a preserved lemon vinaigrette</span></br>
+          </div>
+          <div class="menu4 pl-4">
         <h2 class="pt-3">sandwhiches</h2>
         <span class="menu-text d-inline-block pt-3">Vegan Wrap</span><span class="menu-ingredients pl-5"> 9.</span><br>
         <span class="menu-ingredients">housemade falafel, shaved red onion, cashew tzatziki, iceburg lettuce, chili
@@ -185,6 +190,7 @@
           8.</span><br>
         <span class="menu-ingredients">tomatillo spread, Vella dry jack butter, aged cheddar, fontina, organic rustic
           sourdough, small salad of dressed organic lettuces</span></br>
+        </div>
         <div class="row">
           <div class="col">
             <h2 class="pt-3">adds</h2>
