--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
   </div>
 
   <!-- Food Menu -->
-  <div class="container mt-5 food-menu">
+  <!-- <div class="container mt-5 food-menu">
     <div class="row">
       <div class="col-md-6">
 
-        <div class="menu1 pl-4">
+        <div class="menu1">
         <h2>the sweeter stuff</h2>
         <span class="menu-text d-inline-block pt-3">Bakeshop Pastry</span><br>
         <span class="menu-ingredients">scones, croissants, muffins, cookies etc.</span></br>
@@ -214,11 +214,11 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
   <!-- Beverage Menu -->
-  <div class="container">
+  <!-- <div class="container">
     <div class="row">
       <div class="col-md-12">
         <div class="row">
@@ -319,8 +319,113 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
+
+
+
+
+
+  <div class="container mt-5 food-menu">
+      <div class="row">
+        <div class="col-md-1">
+          <img src="images/sweeterstuff">
+        </div>
+        <div class="col-md-5 menu1 pl-4">
+          <span class="menu-text d-inline-block pt-3">Bakeshop Pastry</span><br>
+          <span class="menu-ingredients">scones, croissants, muffins, cookies etc.</span></br>
+          <span class="menu-text d-inline-block pt-3">Coconut Chia Seed Pudding</span><span class="menu-ingredients pl-5">
+            8.</span><br>
+          <span class="menu-ingredients">seasonal fruit, housemade granola and honey drizzle</span></br>
+          <span class="menu-text d-inline-block pt-3">Buttermilk Belgian Waffle</span><span class="menu-ingredients pl-5">
+            8.</span><br>
+          <span class="menu-ingredients">powdered sugar, whipped butter, organic vermont maple syrup</span></br>
+          <span class="menu-text d-inline-block pt-3">Chicken N Waffle</span><span class="menu-ingredients pl-5">
+            8.</span><br>
+          <span class="menu-ingredients">Confit chicken leg, sunny side egg, chives, duck-fat buttermilk waffle, organic
+            vermont maple syrup</span><br>
+          <span class="menu-text d-inline-block pt-3">Huckleberry Waffle</span><span class="menu-ingredients pl-5">
+            8.</span><br>
+          <span class="menu-ingredients">huckleberry compote, whipped cream, organic vermont maple syrup</span></br>
+        </div>
+        <div class="col-md-1">
+          <h2 class="pt-3">eggs & such</h2>
+        </div>
+        <div class="col-md-5 menu2 pl-4">
+           <span class="menu-text d-inline-block pt-3">Avocado Toast</span><span class="menu-ingredients pl-5">
+            9.</span><br>
+          <span class="menu-ingredients">avocado crush, pickled red onion, shaved radish, garlic-herb pumpkin seed spread,
+            dressed pea and sunflower sprouts, everything spice, poached egg, served open face on multigrain
+            bread</span></br>
+          <span class="menu-text d-inline-block pt-3">Winter Scramble</span><span class="menu-ingredients pl-5">
+            8.</span><br>
+          <span class="menu-ingredients">3 organic eggs, fontina cheese, roasted Hen of the Woods mushroom, chives, local
+            olive oil, buttered organic multigrain toast, seasonal jam, organic greens</span></br>
+          <span class="menu-text d-inline-block pt-3">Ham & Soft Leek 3 Egg Omelet</span><span
+            class="menu-ingredients pl-5"> 8.</span><br>
+          <span class="menu-ingredients">gruyere cheese, wilted spinach, chives, dressed organic greens</span><br>
+          <span class="menu-text d-inline-block pt-3">Smoked Salmon Benedict</span><span class="menu-ingredients pl-5">
+            8.</span><br>
+          <span class="menu-ingredients">housemade english muffin, poached eggs, cold smoked salmon, béarnaise, dressed
+            greens</span><br>
+          <span class="menu-text d-inline-block pt-3">American Breakfast</span><span class="menu-ingredients pl-5">
+            8.</span><br>
+          <span class="menu-ingredients">scrambled eggs, applewood bacon, potatoes, buttered sourdough toast,
+            jam</span><br>
+          <span class="menu-text d-inline-block pt-3">The California Sandwhich</span><span class="menu-ingredients pl-5">
+            8.</span><br>
+          <span class="menu-ingredients">folded eggs, avocado crush, bacon, chevre goat cheese sauce, soft bun, dressed
+            rocket</span><br>
+          <span class="menu-text d-inline-block pt-3">Burrito Mojado</span><span class="menu-ingredients pl-5">
+            8.</span><br>
+          <span class="menu-ingredients">organic eggs, kobocha squash, leeks, spinach, Nina's famous salsa roja, lime
+            cream, cilantro, cotija cheese</span><br>
+        </div>
+  
+  <div class="row">
+    <div class="col-md-1">
+      <h2 class="pt-3">soup, salads & steak</h2>
+    </div>
+    <div class="col-md-5 menu3 pl-4 pt-5">
+      <span class="menu-text d-inline-block pt-3">Cream Of Tomato Soup & Salad</span><span
+            class="menu-ingredients pl-5"> 9.</span><br>
+          <span class="menu-ingredients">california vine ripened tomatoes, local olive oil, fresh herbs, artisan bread &
+            butter and small organic green salad</span></br>
+          <span class="menu-text d-inline-block pt-3">Chicken Salad</span><span class="menu-ingredients pl-5">
+            8.</span><br>
+          <span class="menu-ingredients">roasted hand-picked chicken salad mix, carrots, English cucumbers, pickled
+            onions, organic greens, lemon parsley dressing</span></br>
+          <span class="menu-text d-inline-block pt-3">Mustard Green Salad</span><span class="menu-ingredients pl-5">
+            8.</span><br>
+          <span class="menu-ingredients">organic mustard greens, bacon lardons, poached egg, white beans, pickled fennel,
+            rustic coutons, roasted shallot vinaigrette</span></br>
+          <span class="menu-text d-inline-block pt-3">American Wagyu Steak & Rocket Salad</span><span
+            class="menu-ingredients pl-5"> 8.</span><br>
+          <span class="menu-ingredients">Snake River Farms flank steak, green olive tapenade, spiced pumpkin seeds,
+            roasted kabocha squash, rocket arugula tossed in a preserved lemon vinaigrette</span></br>
+    </div>
+    <div class="col-md-1">
+      <h2 class="pt-3">sandwhiches</h2>
+    </div>
+    <div class="col-md-5 menu4 pl-4">
+      <span class="menu-text d-inline-block pt-3">Vegan Wrap</span><span class="menu-ingredients pl-5"> 9.</span><br>
+          <span class="menu-ingredients">housemade falafel, shaved red onion, cashew tzatziki, iceburg lettuce, chili
+            puree, chipotle tortilla</span></br>
+          <span class="menu-text d-inline-block pt-3">Smoked Duck Bahn Mi</span><span class="menu-ingredients pl-5">
+            8.</span><br>
+          <span class="menu-ingredients">sriracha aioli, herb salad, mung bean sprouts, pickled carrots, shaved jalapeno,
+            cucumber, cilantro on toasted baguette with aleppo cucumber side salad</span></br>
+          <span class="menu-text d-inline-block pt-3">Smoked Salmon</span><span class="menu-ingredients pl-5">
+            8.</span><br>
+          <span class="menu-ingredients">dill and caper spread, cucumbers, shaved red onion, arugula, lemon vinaigrette,
+            dressed organic greens</span></br>
+          <span class="menu-text d-inline-block pt-3">Sunflower Grilled Cheese</span><span class="menu-ingredients pl-5">
+            8.</span><br>
+          <span class="menu-ingredients">tomatillo spread, Vella dry jack butter, aged cheddar, fontina, organic rustic
+            sourdough, small salad of dressed organic lettuces</span><br>
+    </div>
+  </div>
+  </div>
 
   <!-- Gallery -->
 
