--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             rustic coutons, roasted shallot vinaigrette</span><br>
           <span class="menu-text d-inline-block pt-3">American Wagyu Steak &amp; Rocket Salad</span><span class="menu-ingredients pl-5"> 8.</span><br>
           <span class="menu-ingredients">Snake River Farms flank steak, green olive tapenade, spiced pumpkin seeds,
-            roasted kabocha squash, rocket arugula tossed in a preserved lemon vinaigrette</span><br>
+            roasted kabocha squash, rocket arugula tossed in a preserved lemon vinaigrette</span><br><br><br><br><br><br><br><br><br><br>
     
             <span class="menu-text d-inline-block pt-3">Vegan Wrap</span><span class="menu-ingredients pl-5"> 9.</span><br>
             <span class="menu-ingredients">housemade falafel, shaved red onion, cashew tzatziki, iceburg lettuce, chili
