dynamic menu TEST

--- a/index.html
+++ b/index.html
@@ -419,11 +419,20 @@
       </div>
     </div> -->
 
+    <nav>
+        <ul>
+            <li><a href="index.php">Home</a></li>
+            <li><a href="about.php">About</a></li>
+            <li><a href="contact.php">Contact</a></li>
+        </ul>
+    </nav>
+
+
 
 
     <div class="row">
         <div class="col-md-2 pl-5"><br><br><br><br>
-          <h3 class="menu-header">the sweeter stuff<h3>
+          <h3>the sweeter stuff<h3>
         </div>
         <div class="col-md-5 menu1 pl-4">
           <span class="menu-text d-inline-block pt-3">Bakeshop Pastry</span><br>
@@ -518,9 +527,6 @@
         </div>
       </div>
 
-
-
-
   <!-- Gallery -->
 
   <section id="gallery">
@@ -610,6 +616,9 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
+  <script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js'></script>
+  <script type='text/javascript' src='js/jquery.ba-hashchange.min.js'></script>
+  <script type='text/javascript' src='js/dynamicpage.js'></script>
 </body>
 
 </html>
