--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 
     <div class="row">
         <div class="col-md-2 pl-5"><br><br><br><br>
-          <h3>the sweeter stuff<h3>
+          <img src="images/sweeterstuff.jpg">
         </div>
         <div class="col-md-5 menu1 pl-4">
           <span class="menu-text d-inline-block pt-3">Bakeshop Pastry</span><br>
