--- a/index.html
+++ b/index.html
@@ -420,19 +420,18 @@
     </div> -->
 
 
-
     <div class="container">
 
         <div class="section menu-divider mb-5">
         <div class="row">
           <div class="col-md-1">
-            <img src="images/soups+salad.jpg">
+            <img src="images/soups+salads.jpg">
           </div>
           <div class="col-md-5 menu-section">
             <span class="menu-text d-inline-block pt-3">Cream Of Tomato Soup &amp; Salad <span class="pl-5">$12.75</span></span><br>
                   <span class="menu-ingredients">california vine ripened tomatoes, local olive oil, fresh herbs, artisan bread &amp;butter and small organic green salad</span><br>
                   <span class="menu-text d-inline-block pt-3">Arugula Salad<span class="menu-ingredients pl-5">$13.75</span></span><br>
-                  <span class="menu-ingredients">K&J farm apples, toasted walnuts, feta, white balsamic vinaigrette</span><br>
+                  <span class="menu-ingredients">K&amp;J farm apples, toasted walnuts, feta, white balsamic vinaigrette</span><br>
           </div>
           <div class="col-md-5 menu1">
             <span class="menu-text d-inline-block pt-3">Chicken Salad<span class="menu-ingredients pl-5"> $16.00</span></span><br>
@@ -457,7 +456,7 @@
           <div class="col-md-5 menu1">
             <span class="menu-text d-inline-block pt-3">Chicken N Waffle<span class="menu-ingredients pl-5"> $17.00</span></span><br>
                   <span class="menu-ingredients">confit chicken leg, sunny side egg, chives, duck-fat buttermilk waffle, organic Vermont maple syrup</span><br>
-            <span class="menu-text d-inline-block pt-3">Apple Butter & Pecan Waffle<span class="menu-ingredients pl-5">$14.00</span></span><br>
+            <span class="menu-text d-inline-block pt-3">Apple Butter &amp; Pecan Waffle<span class="menu-ingredients pl-5">$14.00</span></span><br>
                   <span class="menu-ingredients">sweet creme fraiche, organic maple syrup</span><br>
           </div>
         </div>
@@ -466,14 +465,14 @@
          <div class="section menu-divider mb-5">
         <div class="row">
           <div class="col-md-1">
-            <img src="images/soups+salad.jpg">
+            <img src="images/eggs+such.jpg">
           </div>
           <div class="col-md-5 menu-section">
             <span class="menu-text d-inline-block pt-3">Avocado Toast<span class="pl-5">$14.50</span></span><br>
                   <span class="menu-ingredients">avocado crush, shaved radish, sunflower seed garlic spread, pickled nectarines, dressed pea and sunflower sprouts, pistachio spice, soft poached egg, organic multigrain bread</span><br>
                   <span class="menu-text d-inline-block pt-3">Summer Scramble<span class="menu-ingredients pl-5">$15.75</span></span><br>
                   <span class="menu-ingredients">organic eggs, cherry tomatoes, caramelized onions, herb and toasted garlic marinated summer squash, shaved grana padano, buttered multigrain toast, jam</span><br>
-             <span class="menu-text d-inline-block pt-3">Ham & Cheddar Omelet<span class="menu-ingredients pl-5"> $14.50</span></span><br>
+             <span class="menu-text d-inline-block pt-3">Ham &amp; Cheddar Omelet<span class="menu-ingredients pl-5"> $14.50</span></span><br>
                   <span class="menu-ingredients">organic sour cream, harissa, scallions, dressed organic greens, buttered multigrain toast</span><br><span>+1/2 avocado 3.00</span>
              <span class="menu-text d-inline-block pt-3">American breakfast<span class="menu-ingredients pl-5"> $15.50</span></span><br>
                   <span class="menu-ingredients">scrambled eggs, applewood bacon, potatoes, buttered sourdough toast, jam</span><br>
@@ -482,7 +481,7 @@
             <span class="menu-text d-inline-block pt-3">The California Sandwhich<span class="menu-ingredients pl-5"> $15.00</span></span><br>
                   <span class="menu-ingredients">folded eggs, avocado crush, bacon, chevre goat cheese spread, soft bun, dressed arugula</span><br>
             <span class="menu-text d-inline-block pt-3">Jardinere Benedict<span class="menu-ingredients pl-5"> $15.00</span></span><br>
-                  <span class="menu-ingredients">kale & carmelized onion, poached eggs, lemony hollandaise, english muffin, dressed greens</span><br><span>+1/2 avocado 3.00 +smoked salmon 6.00 +applewood bacon 3.00</span>
+                  <span class="menu-ingredients">kale &amp; carmelized onion, poached eggs, lemony hollandaise, english muffin, dressed greens</span><br><span>+1/2 avocado 3.00 +smoked salmon 6.00 +applewood bacon 3.00</span>
             <span class="menu-text d-inline-block pt-3">Burrito Mojad<span class="menu-ingredients pl-5"> $14.00</span></span><br>
                   <span class="menu-ingredients">organic eggs, melted onion, roasted potato, summer squash, spicy green chili sauce, lime cream, cotija cream, cilantro</span><br><span>+1/2 avocado 3.00 +smoked ham 3.00 +roasted chicken 4.00</span>
           </div>
@@ -493,12 +492,12 @@
         <div class="section menu-divider mb-5">
         <div class="row">
           <div class="col-md-1">
-            <img src="images/eggs+stuff.jpg">
+            <img src="images/sandwiches.jpg">
           </div>
           <div class="col-md-5 menu-section">
             <span class="menu-text d-inline-block pt-3">Sunflower Grilled Cheese<span class="menu-ingredients pl-5"> $12.75</span></span><br>
                   <span class="menu-ingredients">Vella dry jack butter, aged cheddar, fontina, nettle pesto, organic rustic sourdough, small salad of dressed organic lettuces</span><br><span>+smoked ham 3.00 +cup of soup 4.00 +roasted chicken 4.00 +applewood bacon 3.00</span>
-                  <span class="menu-text d-inline-block pt-3">Chicken & Herb Gyro<span class="menu-ingredients pl-5"> $16.00</span></span><br>
+                  <span class="menu-text d-inline-block pt-3">Chicken &amp; Herb Gyro<span class="menu-ingredients pl-5"> $16.00</span></span><br>
                   <span class="menu-ingredients">tzatziki, lettuce, cherry tomatoes, cucumber, red onion, lavash, with dressed greens</span><br>
             <span class="menu-text d-inline-block pt-3">Avocado Goat Cheese<span class="menu-ingredients pl-5"> $14.00</span></span><br>
                   <span class="menu-ingredients">herbed cherve goat cheese, cherry tomatoes, shallot-vinegrette dressed arugula, pickled red onion, organic multigrain bread</span><br><span>+roasted chicken 4.00 +applewood bacon +3.00</span><br>
@@ -513,9 +512,6 @@
         </div> 
         </div>
 
-
-
-        
   <!-- Gallery -->
 
   <section id="gallery">
