--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="section menu-divider mb-5">
         <div class="row">
           <div class="col-md-1">
-            <img src="images/sweeterstuff.jpg">
+            <img src="images/sweeterstuff.jpg" class="menu-header">
           </div>
           <div class="col-md-5 menu-section">
             <span class="menu-text d-inline-block">Coconut Chia Seed Pudding<span class="menu-ingredients pl-5"> $9.50</span></span><br>
@@ -138,7 +138,7 @@
          <div class="section menu-divider mb-5">
         <div class="row">
           <div class="col-md-1">
-            <img src="images/eggs+such.jpg">
+            <img src="images/eggs+such.jpg" class="menu-header">
           </div>
           <div class="col-md-5 menu-section">
             <span class="menu-text d-inline-block">Avocado Toast<span class="pl-5">$14.50</span></span><br>
@@ -165,7 +165,7 @@
         <div class="section menu-divider mb-5">
         <div class="row">
           <div class="col-md-1">
-            <img src="images/sandwiches.jpg">
+            <img src="images/sandwiches.jpg" class="menu-header">
           </div>
           <div class="col-md-5 menu-section">
             <span class="menu-text d-inline-block">Sunflower Grilled Cheese<span class="menu-ingredients pl-5"> $12.75</span></span><br>
