--- a/index.html
+++ b/index.html
@@ -222,22 +222,22 @@
 
   <!-- Gallery -->
 
-  <div class="container px-5">
+  <div class="container">
     <div class="row">
       <div class="col-md-12 mt-5">
         <div class="photo-1">
-          <img src="images/temp-img-4.jpg" alt="Éléphant restaurant" class="float-right gallery">
+          <img src="images/temp-img-4.jpg" alt="Éléphant restaurant" class="float-right">
         </div>
       </div>
       <div class="col-md-12 mt-5">
         <div class="photo-2">
-          <img src="images/temp-img-3.jpg" alt="Éléphant restaurant">
-          <img src="images/temp-img-6.png" alt="Éléphant restaurant" width="277" height="200" class="gallery pl-5 pt-5">
+          <img src="images/temp-img-1.jpg" alt="Éléphant restaurant">
+          <img src="images/temp-img-8.png" alt="Éléphant restaurant" class="pl-5 pt-5">
         </div>
       </div>
       <div class="col-md-12 mt-5">
         <div class="photo-4">
-          <img src="images/temp-img-7.jpg" alt="Éléphant restaurant" class="gallery float-right mb-5">
+          <img src="images/temp-img-7.jpg" alt="Éléphant restaurant" class="float-right mb-5">
         </div>
       </div>
     </div>
