--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
       </div>
       <div class="col-md-12 mt-5">
         <div class="photo-2">
-          <img src="images/temp-img-1.jpg" alt="Éléphant restaurant">
-          <img src="images/temp-img-8.png" alt="Éléphant restaurant" class="pl-5 pt-5">
+          <img src="images/temp-img-1.png" alt="Éléphant restaurant">
+          <img src="images/temp_img-8.jpg" alt="Éléphant restaurant" class="pl-5 pt-5">
         </div>
       </div>
       <div class="col-md-12 mt-5">
