--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       <div class="col-md-12 mt-5">
         <div class="photo-2">
           <img src="images/temp-img-4.jpg" alt="Éléphant restaurant">
-          <img src="images/temp_img-1.jpg" alt="Éléphant restaurant" class="pl-5 pt-5">
+          <img src="images/temp_img-6.png" alt="Éléphant restaurant" class="pl-5 pt-5">
         </div>
       </div>
       <div class="col-md-12 mt-5">
