--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
   </div>
 
   <!-- Gallery -->
-
+  <!-- 
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12 mt-5">
@@ -241,7 +241,32 @@
         </div>
       </div>
     </div>
+  </div> -->
+
+
+
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+        <img src="https://www.w3schools.com/w3images/wedding.jpg" class="img-fluid">
+        <img src="https://www.w3schools.com/w3images/rocks.jpg" class="img-fluid">
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+        <img src="https://www.w3schools.com/w3images/underwater.jpg" class="img-fluid">
+        <img src="https://www.w3schools.com/w3images/ocean.jpg" class="img-fluid">
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+        <img src="https://www.w3schools.com/w3images/wedding.jpg" class="img-fluid">
+        <img src="https://www.w3schools.com/w3images/rocks.jpg" class="img-fluid">
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+        <img src="https://www.w3schools.com/w3images/underwater.jpg" class="img-fluid">
+        <img src="https://www.w3schools.com/w3images/ocean.jpg" class="img-fluid">
+      </div>
+    </div>
   </div>
+
 
   <!-- Breaker -->
   <!-- <div class="container-fluid breaker my-5" style="background-color: orange">
