--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
 
   <div class="container-fluid">
-    <div class="row">
+    <div class="row image pb-5">
       <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
         <img src="https://www.w3schools.com/w3images/wedding.jpg" class="img-fluid">
         <img src="https://www.w3schools.com/w3images/rocks.jpg" class="img-fluid">
