--- a/index.html
+++ b/index.html
@@ -247,22 +247,29 @@
 
 
   <div class="container-fluid">
-    <div class="row image pb-5">
+    <div class="row">
       <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
+
         <img src="https://www.w3schools.com/w3images/wedding.jpg" class="img-fluid">
         <img src="https://www.w3schools.com/w3images/rocks.jpg" class="img-fluid">
+
       </div>
       <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
         <img src="https://www.w3schools.com/w3images/underwater.jpg" class="img-fluid">
         <img src="https://www.w3schools.com/w3images/ocean.jpg" class="img-fluid">
+        <img src="https://www.w3schools.com/w3images/wedding.jpg" class="img-fluid">
+
       </div>
       <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
         <img src="https://www.w3schools.com/w3images/wedding.jpg" class="img-fluid">
         <img src="https://www.w3schools.com/w3images/rocks.jpg" class="img-fluid">
+
       </div>
       <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
         <img src="https://www.w3schools.com/w3images/underwater.jpg" class="img-fluid">
         <img src="https://www.w3schools.com/w3images/ocean.jpg" class="img-fluid">
+        <img src="https://www.w3schools.com/w3images/wedding.jpg" class="img-fluid">
+
       </div>
     </div>
   </div>
