--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </div>
 
     <div class="section menu-divider mb-5">
-      <div class="row">
+      <div class="row row-grid">
         <div class="col-md-1">
           <img src="images/eggs+such.jpg" class="menu-header">
         </div>
@@ -187,7 +187,7 @@
 
 
     <div class="section menu-divider mb-5">
-      <div class="row">
+      <div class="row row-grid">
         <div class="col-md-1">
           <img src="images/sandwiches.jpg" class="menu-header">
         </div>
