--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
     </div>
 
     <div class="section menu-divider mb-5">
-      <div class="row row-grid">
-        <div class="col-md-1">
-          <img src="images/eggs+such.jpg" class="menu-header">
+      <div class="row">
+        <div class="col-md-1 menu-header">
+          <img src="images/eggs+such.jpg" class="">
         </div>
         <div class="col-md-5 menu-section">
           <span class="menu-text d-inline-block">Avocado Toast<span class="pl-5">$14.50</span></span><br>
@@ -187,7 +187,7 @@
 
 
     <div class="section menu-divider mb-5">
-      <div class="row row-grid">
+      <div class="row">
         <div class="col-md-1">
           <img src="images/sandwiches.jpg" class="menu-header">
         </div>
