--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 
     <div class="section menu-divider mb-5">
       <div class="row">
-        <div class="col-md-1 menu-header">
-          <img src="images/eggs+such.jpg" class="">
+        <div class="col-md-1">
+          <img src="images/eggs+such.jpg" class="menu-header">
         </div>
         <div class="col-md-5 menu-section">
           <span class="menu-text d-inline-block">Avocado Toast<span class="pl-5">$14.50</span></span><br>
