--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="col-md-5 menu-section">
           <span class="menu-text d-inline-block">Cream Of Tomato Soup &amp; Salad <span
-              class="pl-5">$12.75</span></span><br>
+              class="menu-ingredients pl-5">$12.75</span></span><br>
           <span class="menu-ingredients">california vine ripened tomatoes, local olive oil, fresh herbs, artisan bread
             &amp;butter and small organic green salad</span><br>
           <span class="menu-text d-inline-block pt-5">Arugula Salad<span
