--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   </div>
 
   <!-- Breaker -->
-  <div class="container-fluid breaker my-5" background-img="images/yellowbanner.jpg">
+  <div class="container-fluid breaker my-5">
   </div>
 
   <!-- Food Menu -->
