--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 
   <!-- Breaker -->
   <div class="container-fluid breaker my-5">
+    <img src="images/yellowbanner.jpg" class="breaker-image">
   </div>
 
   <!-- Food Menu -->
