--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   </div>
 
   <!-- Breaker -->
-  <div class="container-fluid breaker my-5">
+  <div class="my-5">
     <img src="images/yellowbanner.jpg" class="breaker-image">
   </div>
 
