--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
   </div>
 
-  <!-- Our Story -->
+  <!-- Contact Info -->
   <div class="container mx-auto">
     <div class="row justify-content-center">
       <div class="col-md-4 text-center">
@@ -91,7 +91,7 @@
 
   <!-- Breaker -->
   <div class="my-5">
-    <img src="images/yellowbanner.jpg" class="breaker-image">
+    <img src="images/yellowbanner.jpg" class="img-fluid breaker-image">
   </div>
 
   <!-- Food Menu -->
@@ -340,7 +340,8 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
-  <script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js'></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="js/scripts.js"></script>
   <script type='text/javascript' src='js/jquery.ba-hashchange.min.js'></script>
   <script type='text/javascript' src='js/dynamicpage.js'></script>
 </body>
