yellowbanner changed in height

--- a/index.html
+++ b/index.html
@@ -91,8 +91,17 @@
 
   <!-- Breaker -->
   <div class="my-5">
-    <img src="images/yellowbanner.jpg" class="img-fluid breaker-image">
+    <img src="images/yellowbanner2.jpg" class="img-fluid breaker-image">
   </div>
+
+
+  <!-- replacing content -->
+  <button onclick="showMicro()">Show Microsoft</button>
+
+  <button onclick="showw3c()">Show w3c</button>
+
+  <div id="demo">Visit Microsoft!</div>
+
 
   <!-- Food Menu -->
   <div class="container">
