--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
 
 
   <!-- replacing content -->
-  <button onclick="showMicro()">Show Microsoft</button>
+  <!-- <button onclick="showMicro()">Show Microsoft</button>
 
   <button onclick="showw3c()">Show w3c</button>
 
-  <div id="demo">Visit Microsoft!</div>
+  <div id="demo">Visit Microsoft!</div> -->
 
 
   <!-- Food Menu -->
@@ -351,8 +351,6 @@
   </script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/scripts.js"></script>
-  <script type='text/javascript' src='js/jquery.ba-hashchange.min.js'></script>
-  <script type='text/javascript' src='js/dynamicpage.js'></script>
 </body>
 
 </html>
