white-box overflow-hidden

--- a/index.html
+++ b/index.html
@@ -687,12 +687,13 @@
           </div>
           <div class="col-md-5 col-sm-10 pt-4">
             <!--Column1-->
-            <div class="white-box">
+            <div class="white-box sm-2">
               <h4>Heading 2</h4>
               <button type="button" class="btn btn-warning">
                 Join Our Mailing List
               </button>
             </div>
+
           </div>
           <div class="col-md-1 col-sm-2 pt-3">
             <!--Column1-->
