--- a/index.html
+++ b/index.html
@@ -685,9 +685,9 @@
                 ultimately lost it in a poker game, which worked out great for us.</p>
             </div>
           </div>
-          <div class="col-md-5 col-sm-10 pt-4">
+          <div class="col-md-5 col-sm-10 col-xs-10 pt-4 text-center">
             <!--Column1-->
-            <div class="white-box sm-2">
+            <div class="white-box text-center">
               <h4>Heading 2</h4>
               <button type="button" class="btn btn-warning">
                 Join Our Mailing List
