over-flow hidden on subscribe box + menu button changed to links

--- a/index.html
+++ b/index.html
@@ -390,8 +390,9 @@
                 class="menu-ingredients menu-price pl-5">
                 12.75</span></span><br>
             <span class="menu-ingredients">Vella dry jack butter, aged cheddar, fontina, nettle pesto, organic rustic
-              sourdough, small salad of dressed organic lettuces</span><br><span>+smoked ham 3. +cup of soup 4.00
-              +roasted chicken 4. +applewood bacon 3.</span>
+              sourdough, small salad of dressed organic lettuces <br><span class="menu-ingredients">+smoked ham 3.
+                +cup of
+                soup 4. +roasted chicken 4. +applewood bacon 3.</span></span><br>
             <span class="menu-text d-inline-block pt-5">Chicken &amp; Herb Gyro<span
                 class="menu-ingredients menu-price pl-5">
                 16.</span></span><br>
@@ -758,18 +759,27 @@
   <!-- Gallery -->
 
   <div class="container">
-    <div class="row image">
-      <div class="col-lg-12 col-md-12 col-sm-6 col-xs-6">
+    <div class="row image row-sm-12">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-6">
         <div class="photo-1">
           <img src="images/temp-img-4.jpg" alt="Éléphant restaurant" class="gallery-img img-fluid float-right">
         </div>
       </div>
-      <div class="col-lg-12 col-md-12 col-sm-6 col-xs-6">
+    </div>
+    <div class="row image">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-3">
         <div class="photo-2">
           <img src="images/temp-img-4.jpg" alt="Éléphant restaurant" class="gallery-img img-fluid">
         </div>
       </div>
-      <div class="col-lg-12 col-md-12 col-sm-6 col-xs-6">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-3 px-5">
+        <div class="photo-3">
+          <img src="images/temp-img-4.jpg" alt="Éléphant restaurant" class="gallery-img img-fluid pt-3 px-5">
+        </div>
+      </div>
+    </div>
+    <div class="row image">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-6 mb-5">
         <div class="photo-4">
           <img src="images/temp-img-4.jpg" alt="Éléphant restaurant" class="gallery-img img-fluid float-right">
         </div>
@@ -861,8 +871,8 @@
     </div>
   </footer> -->
 
-  <img src="images/logo-half.png" class="img-fluid footer-logo">
-
+  <!-- <img src="images/logo-half.png" class="img-responsive footer-logo">
+ -->
 
 
   <footer class="mainfooter" role="contentinfo">
